hdone/objects/AuditSettingMappingHitSettingType__mdt.object
<CustomObject>
    <description>Junction of AuditSettingMapping and HitSettingTypes</description>
    <fields>
        <fullName>AuditSettingMapping__c</fullName>
        <description>AuditSettingMapping</description>
        <inlineHelpText>AuditSettingMapping</inlineHelpText>
        <label>AuditSettingMapping</label>
        <referenceTo>AuditSettingMapping__mdt</referenceTo>
        <relationshipLabel>AuditSettingMappingHitSettingTypes</relationshipLabel>
        <relationshipName>AuditSettingMappingHitSettingTypes</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <referenceTo>Category__mdt</referenceTo>
        <relationshipLabel>AuditSettingMappingHitSettingTypes</relationshipLabel>
        <relationshipName>AuditSettingMappingHitSettingTypes</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>HitSettingType__c</fullName>
        <description>HitSettingType</description>
        <inlineHelpText>HitSettingType</inlineHelpText>
        <label>HitSettingType</label>
        <referenceTo>HitSettingType__mdt</referenceTo>
        <relationshipLabel>AuditSettingMappingHitSettingTypes</relationshipLabel>
        <relationshipName>AuditSettingMappingHitSettingTypes</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if record is active</description>
        <inlineHelpText>IsActive?</inlineHelpText>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCustomerDisplay__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should customer display show as True?</description>
        <inlineHelpText>Should customer display show as True?</inlineHelpText>
        <label>IsCustomerDisplay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if field is required</description>
        <inlineHelpText>Is field required?</inlineHelpText>
        <label>IsRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MultiResponse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if question is multi response</description>
        <inlineHelpText>Indicates if question is multi response</inlineHelpText>
        <label>MultiResponse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QAStatus__c</fullName>
        <description>QA status for record</description>
        <inlineHelpText>QA status for record</inlineHelpText>
        <label>QAStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                    <default>true</default>
                    <label>Check</label>
                </value>
                <value>
                    <fullName>Skip</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <description>Type of question usually for MTurk</description>
        <inlineHelpText>Type of question</inlineHelpText>
        <label>Question Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                    <label>Text</label>
                </value>
                <value>
                    <fullName>Single Choice</fullName>
                </value>
                <value>
                    <fullName>Multi Choice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ResponseObject__c</fullName>
        <label>ResponseObject</label>
        <referenceTo>Object__mdt</referenceTo>
        <relationshipLabel>AuditSettingMappingHitSettingTypes</relationshipLabel>
        <relationshipName>AuditSettingMappingHitSettingTypes</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Sort__c</fullName>
        <description>Sort order. Also used for question numbering. 4 = Question 4, etc</description>
        <label>Sort</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>AuditSettingMappingHitSettingType</label>
    <pluralLabel>AuditSettingMappingHitSettingTypes</pluralLabel>
</CustomObject>